# Tecflix.

./: README.md
TecFlix/: CMakeLists.txt  main.cpp
TecFlix/CSV/: lectura.cpp
TecFlix/Lista/: node.h
TecFlix/Ventana/: ventana.cpp  ventana.h  ventana2.cpp  ventana2.h
